--- a/task1.html
+++ b/task1.html
@@ -16,7 +16,8 @@
     <p><a href="Eugenio Lopes"></a></p>
     <hr width="1900" align="left" color="blue">
     <h3>Objetivos</h3>
-    <p>Tenho como principal objetico nessa fabrica é ganhar experiencia em front-end e tentar atuar na area, logo após quero tem um pouco de conhecimento em todas as areas</p>
+    <p>Tenho como principal objetico nessa fabrica é ganhar experiencia em front-end e tentar atuar na area, logo após quero ter
+        um pouco de conhecimento em todas as areas</p>
     <h3>Hobbies</h3>
     <ul>
         <li>Praticar esportes</li>
